# blob_descriptor

./: .gitignore  pyproject.toml
.github/workflows/: across.yml  build.yml  publish.yml  test.yml
blob_descriptor/: __init__.py  __main__.py  assemble.py  check.py  construct.py  create.py  finder.py  main.py  utils.py  verify.py
tests/: test_cli_2.py  test_create.py
