[project]
name = "blob_descriptor"
dynamic = ["version"]
description = "Toolkit for managing large binary files through chunking and metadata descriptors"
readme = "README.md"
authors = [
    {name = "Jet-Logic"},
]
license = {file = "LICENSE"} 
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: System :: Filesystems",
    "Topic :: Utilities",
]
keywords = ["blob", "chunk", "descriptor", "metadata", "binary", "files"]
requires-python = ">=3.8"
dependencies = [
    "requests",  # For URLSource functionality
]

[project.urls]
Homepage = "https://github.com/jet-logic/blob_descriptor"
Documentation = "https://github.com/jet-logic/blob_descriptor#readme"
BugTracker = "https://github.com/jet-logic/blob_descriptor/issues"
Changelog = "https://github.com/jet-logic/blob_descriptor/releases"

[project.scripts]
blob_descriptor = "blob_descriptor.__main__:main"


[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]
dev = [
    "black",
    "flake8",
    "flake8-pyproject",
    "mypy",
    "twine"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "blob_descriptor.__init__.__version__"}

[tool.black]
line-length = 127
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 127

[tool.mypy]
files = [    "blob_descriptor"]